# rus2num

./: .gitignore  LICENSE  Makefile  README.md  extractor.py  extractor_new.py  number.py  pyproject.toml  test.py  test_custom.py
rus2num/: __init__.py  main.py  number.py
tests/: gt.json  test_r2n.py
