[tool.poetry]
name = "rus2num"
version = "0.1.0"
description = "(Russian) numerals to numbers transform"
authors = ["Alexander Stupnikov <saarus72@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/saarus72/rus2num"

[tool.poetry.dependencies]
python = "^3.8"
natasha = "0.10.0"
yargy = "0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
